--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gsap_practice</title>
+    <link rel="stylesheet" href="style.css">
+    <title>GSAP_PRACTICE</title>
   </head>
   <body>
-    <div id="app"></div>
+<main>
+  <section id="section1">
+
+    <h1>GSAP Practices</h1>
+
+
+    <div class="cardContainer">
+      <a href="/src/pages/01a/index.html">
+    <div class="card">
+        <h2>GSAP START</h2>
+        <p>Setting up GSAP and animating with it.</p>
+      </div></a>
+    </div>
+  </section>
+</main>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
