--- a/src/pages/01a/index.html
+++ b/src/pages/01a/index.html
@@ -19,32 +19,32 @@
     <main>
 
         <section>
-            <h1>GSAP START</h1>
+            <h1>GSAP Getting Started</h1>
             <p>
                 Let's get started haha!
             <pre class="language-js">
                     <code>
-                        gsap.to(".box1", {
-                            opacity: 1,
-                            scale: 1,
-                            duration: .3,
-                            onComplete: ()=>{
-                                gsap.to(".box1",{
-                                    y: 20,
-                                    repeat: -1, 
-                                    yoyo: true,
-                                    delay: .3
-                                    }
-                                )
-                            }
-                        })
-                                        
+gsap.to(".box1", {
+    opacity: 1,
+    scale: 1,
+    duration: .3,
+    onComplete: ()=>{
+        gsap.to(".box1",{
+            y: 20,
+            repeat: -1, 
+            yoyo: true,
+            delay: .3
+            }
+        )
+    }
+})            
                 </code>
                 </pre>
             </p>
 
 
             <div class="playground">
+                <button id="reloadBtn">Reload</button>
                 <div class="box1">
                     Box 1
                 </div>
