--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <p>Getting started with GSAP.</p>
           </div>
         </a>
-        <a href="/src/pages/01a/index.html">
+        <a href="/src/pages/02/index.html">
           <div class="card">
-            <h2>Getting Start</h2>
-            <p>Getting started with GSAP.</p>
+            <h2>Experimenting with Properties</h2>
+            <p>It's time to play with properties.</p>
           </div>
         </a>
       </div>
