gsap controll methods

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <p>It's time to play with properties.</p>
           </div>
         </a>
+        <a href="/src/pages/03/index.html">
+          <div class="card">
+            <h2>GSAP Methods</h2>
+            <p>Methods for controlling the animations.</p>
+          </div>
+        </a>
       </div>
     </section>
   </main>
