--- a/src/pages/02/index.html
+++ b/src/pages/02/index.html
@@ -22,7 +22,7 @@
             <h1>Experimenting with Properties</h1>
             <p>
                 We can animate with css properties yay!...
-                But css properties must be used in camelCase
+                But css properties must be used in camelCase and for using special characters wrapping in quotation is needed.
             <pre class="language-js">
                     <code>
 gsap.to(".box1", {
