--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <p>Methods for controlling the animations.</p>
           </div>
         </a>
+        <a href="/src/pages/04/index.html">
+          <div class="card">
+            <h2>Scroll</h2>
+            <p>Methods for controlling the animations.</p>
+          </div>
+        </a>
       </div>
     </section>
   </main>
