--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             <p>Methods for controlling the animations.</p>
           </div>
         </a>
+        <a href="/src/pages/05/index.html">
+          <div class="card">
+            <h2>Bounding</h2>
+            <p>Methods for controlling the animations.</p>
+          </div>
+        </a>
       </div>
     </section>
   </main>
