--- a/src/pages/04/index.html
+++ b/src/pages/04/index.html
@@ -47,33 +47,7 @@ const  box1Animation = gsap.to(".box1", {
     ease: "bounce.out"
 })
 
-playBtn.addEventListener("click", ()=>{
-    box1Animation.play()
-})
-pauseBtn.addEventListener("click", ()=>{
-    box1Animation.pause()
-})
-ResumeBtn.addEventListener("click", ()=>{
-box1Animation.resume()
-})
-ReverseBtn.addEventListener("click", ()=>{
-box1Animation.reverse()
-})
-restartBtn.addEventListener("click", ()=>{
-box1Animation.restart()
-})
-killBtn.addEventListener("click", ()=>{
-box1Animation.kill()
-})
-yoyoBtn.addEventListener("click", ()=>{
-box1Animation.yoyo(true)
-})
-repeatBtn.addEventListener("click",()=>{
-    box1Animation.repeat(1)
-})
-reloadBtn.addEventListener("click", () => {
-    box1Animation.restart()
-})</code>
+</code>
                 </pre>
             </p>
             <div class="playground">
