--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </a>
         <a href="/src/pages/05/index.html">
           <div class="card">
-            <h2>Bounding</h2>
-            <p>Methods for controlling the animations.</p>
+            <h2>Bouce.out</h2>
+            <p>Checking out bounce.out easing function.</p>
           </div>
         </a>
       </div>
