--- a/src/pages/05/index.html
+++ b/src/pages/05/index.html
@@ -19,11 +19,9 @@
     <main>
         <button class="upBtn">Up</button>
         <section>
-            <h1>GSAP Methods</h1>
+            <h1>Ease Function Bounce.out</h1>
             <p>
-                We can animate with css properties yay!...
-                But css properties must be used in camelCase and for using special characters wrapping in quotation is
-                needed.
+               Here we check Bounce.out easing function. yay
             <pre class="language-js">
                     <code>
 const tabs = document.querySelectorAll(".tab")
