--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <p>Checking out bounce.out easing function.</p>
           </div>
         </a>
+        <a href="/src/pages/06/index.html">
+          <div class="card">
+            <h2>Bar</h2>
+            <p>Checking out bounce.out easing function.</p>
+          </div>
+        </a>
       </div>
     </section>
   </main>
